fixed white space

--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -74,6 +74,7 @@ main{
     height: 40vh;
     float:left;
     margin: 10px;
+    border-radius: 2%;
 }
 
 //films css
@@ -136,10 +137,6 @@ ul {
     background-color: antiquewhite;
 }
 
-.options ul li:last-child {
-    // border-bottom: solid 2px green; 
-}
-
 a{
     display: block;
     text-decoration: none;
@@ -147,10 +144,15 @@ a{
     margin: 0%;
 }
 
+#content{
+    padding: 5px 10px;
+    }
+
 @media screen and (max-width: 600px) {
     div.page{
         grid-template-rows: 50px 100px 1fr 100px;
         grid-template-columns: 1fr;
+        width: 100%;
         /* gap: 5px 10px; */
         grid-template-areas:
         "menu"
@@ -185,9 +187,19 @@ a{
 
     .book-card{
         width: 100%;
+        margin: 0;
     }
     
     .film-card{
         width: 100%;
+        margin: 0;
+    }
+
+    .book-card img{
+        height: 20vh;
+    }
+
+    .film-card img{
+        height: 20vh;
     }
 }
